# pyuvis

./: .gitignore  .landscape.yml  CHANGELOG.md  CITATION.cff  FUV.ipynb  LICENSE  Makefile  README.md  pyproject.toml  settings.ini  setup.py
.github/workflows/: docs.yml  nbdev.yml  test.yml
archive/: cleaned_index_notebook.ipynb
archive/nbdev_notebooks/: 04_calib.greg.ipynb  08_stats.ipynb
archive/old_jekyll_docs/: _config.yml  calib.greg.html  sidebar.json
archive/old_jekyll_docs/_data/: topnav.yml
conda/pyuvis/: meta.yaml
docs/: FUV.html  Gemfile  UVIS reader.html  _quarto.yml  calib.greg.html  downloads.html  hsp_sensitivity.html  idlsav.html  index.html  index.qmd  io.html  pds.html  sidebar.json  uvis_archive_reader.html
docs/_data/sidebars/: home_sidebar.yml
docs/tutorials/: 01_hsp_sensitivity.ipynb  02_idlsav.ipynb  03_io.ipynb  04_calib_greg.ipynb  05_pds.ipynb  06_calib_steffl.ipynb  07_calib_row2row.ipynb  08_stats.ipynb  index.qmd
notebooks/: 00_downloads.ipynb  01_hsp_sensitivity.ipynb  02_idlsav.ipynb  03_io.ipynb  04_archive.ipynb  05_pds.ipynb  2016-03-29 New UVIS occultation HSP file.py  FUV.ipynb  FUV.py  March occultation.py  UVIS reader.ipynb  debugging.py  index.ipynb  netcdf reader.py  uvis_archive_reader.ipynb
pyuvis/: __init__.py  _nbdev.py  _nbdev.py.bak  archive.py  calib.py  downloads.py  hsp_sensitivity.py  idlsav.py  io.py  pds.py  qube.py  read_idlsav_file.py  readers.py
pyuvis/calib/: greg.py  steffl.py
src/pyuvis/: HSP_CALIBRATION.TXT  __init__.py  downloads.py  hsp_sensitivity.py  idlsav.py  io.py  pds.py
src/pyuvis/calib/: __init__.py  greg.py  steffl.py
