[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyuvis"
version = "0.8.0"
description = "Python tools for Cassini UVIS data"
readme = "README.md"
requires-python = ">= 3.10, <4"
license = {text = "Apache-2.0"}
authors = [{name = "K.-Michael Aye", email = "kmichael.aye@gmail.com"}]
keywords = ["Cassini", "UVIS", "data", "tools", "planetary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas>=1.0",
    "xarray>=0.19",
    "hvplot>=0.7",
    "planetarypy>=0.21",
    "matplotlib>=1.0",
    "seaborn",
    "fastcore",
    "astropy",
    "pvl",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/Cassini-UVIS/pyuvis"
Documentation = "https://cassini-uvis.github.io/pyuvis/"
Repository = "https://github.com/Cassini-UVIS/pyuvis"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "build", "twine"]
docs = ["quartodoc>=0.11.1", "griffe>=1.5,<2", "jupyter", "nbformat"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyuvis"]
