[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyuvis"
version = "0.9.0"
description = "Python tools for Cassini UVIS data"
readme = "README.md"
requires-python = ">= 3.12, <4"
license = {text = "Apache-2.0"}
authors = [{name = "K.-Michael Aye", email = "kmichael.aye@gmail.com"}]
keywords = ["Cassini", "UVIS", "data", "tools", "planetary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pandas>=1.0",
    "xarray>=0.19",
    "planetarypy>=0.55.0",
    "matplotlib>=1.0",
    "seaborn",
    "fastcore",
    "astropy",
    "pvl",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/Cassini-UVIS/pyuvis"
Documentation = "https://cassini-uvis.github.io/pyuvis/"
Repository = "https://github.com/Cassini-UVIS/pyuvis"

[project.optional-dependencies]
viz = ["hvplot>=0.7", "holoviews"]
dev = ["pytest", "pytest-cov", "build", "twine"]
docs = ["quartodoc>=0.11.1", "griffe>=1.5,<2", "jupyter", "nbformat", "pyuvis[viz]"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyuvis"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyuvis",
    "README.md",
    "CHANGELOG.md",
    "CITATION.cff",
    "LICENSE",
    "pyproject.toml",
]

[tool.bumpversion]
current_version = "0.9.0"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "v{new_version}"
allow_dirty = false
message = "bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "src/pyuvis/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
